@@ -17,11 +17,6 @@
 #  https://www.R-project.org/Licenses/
 
 removeSource <- function(fn) {
-    stopifnot(is.function(fn))
-    if (is.primitive(fn)) return(fn)
-    attr(fn, "srcref") <- NULL
-    attr(body(fn), "wholeSrcref") <- NULL
-    attr(body(fn), "srcfile") <- NULL
 
     recurse <- function(part) {
         if (is.name(part)) return(part)  # handles missing arg, PR#15957
@@ -34,8 +29,21 @@ removeSource <- function(fn) {
 	}
         part
     }
-    body(fn) <- recurse(body(fn))
-    fn
+
+    if(is.function(fn)) {
+        if(!is.primitive(fn)) {
+            attr(fn, "srcref") <- NULL
+            attr(body(fn), "wholeSrcref") <- NULL
+            attr(body(fn), "srcfile") <- NULL
+            body(fn) <- recurse(body(fn))
+        }
+        fn
+    }
+    else if(is.language(fn)) { # expression, call, or symbol=name
+	recurse(fn)
+    }
+    else
+	stop("argument is not a function or language object:", typeof(fn))
 }
 
 getSrcFilename <- function(x, full.names=FALSE, unique=TRUE) {
